# AstroSort

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  ruff.yml
src/AstroSort/: _AstroObject.py  __init__.py  _loader.py  _utils.py  main.py  required_fov.py
src/AstroSort.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/AstroSort/_data/: NI2026.csv
src/AstroSort_Grcar/: astrocalculator.py
tests/: test.py
