[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "AstroSort"
version = "0.1.1"
description = "This project allows a user to find optimal astrophotography targets for their setup."
readme = "README.md"
requires-python = ">=3.13"

license = { file = "LICENSE" }

authors = [
    { name = "Griffin Richard Carroll" }
]

dependencies = [
    "numpy>=1.26",
    "pandas>=3.0.0",
    "importlib>=1.0.4",
    "platformdirs>=4.9.6"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"AstroSort._data" = ["*.csv"]

[tool.ruff]
target-version = "py313"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # import sorting
    "B",    # bugbear
    "UP",   # pyupgrade
    "SIM",  # simplifications
]
ignore = [
    "E501", # line length handled by formatter
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"